next medium version

--- a/articolo.html
+++ b/articolo.html
@@ -183,7 +183,7 @@
                 placeholder="inserisci l'email"
                 required
               />
-              <button type="submit">Iscriviti!</button>
+              <button class="iscrivitiNews" type="submit">Iscriviti!</button>
             </fieldset>
           </form>
         </section>
